--- a/src/main/resources/View/cardProduct.fxml
+++ b/src/main/resources/View/cardProduct.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -12,13 +11,9 @@
       <DropShadow />
    </effect>
    <children>
-      <ImageView fx:id="Image" fitHeight="200.0" fitWidth="200.0" layoutX="8.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../Picture/Ava.jpg" />
-         </image>
-      </ImageView>
-      <Label fx:id="Name" layoutX="14.0" layoutY="228.0" text="Name" />
-      <Label fx:id="Price" layoutX="165.0" layoutY="246.0" text="Price">
+      <ImageView fx:id="Image" fitHeight="200.0" fitWidth="200.0" layoutX="8.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="Name" layoutX="14.0" layoutY="228.0" />
+      <Label fx:id="Price" layoutX="165.0" layoutY="246.0">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
