--- a/src/main/resources/View/cardProduct.fxml
+++ b/src/main/resources/View/cardProduct.fxml
@@ -6,17 +6,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="cardPane" prefHeight="286.0" prefWidth="215.0" styleClass="product" stylesheets="@../product.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.cardProductController">
+<AnchorPane fx:id="cardPane" prefHeight="291.0" prefWidth="210.0" styleClass="product" stylesheets="@../product.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.cardProductController">
    <effect>
       <DropShadow />
    </effect>
    <children>
-      <ImageView fx:id="Image" fitHeight="200.0" fitWidth="200.0" layoutX="8.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="Name" layoutX="14.0" layoutY="228.0" />
-      <Label fx:id="Price" layoutX="165.0" layoutY="246.0">
+      <ImageView fx:id="Image" fitHeight="210.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true" styleClass="product-image" />
+      <Label fx:id="Price" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="8.0" layoutY="251.0" prefHeight="20.0" prefWidth="194.0" styleClass="label-price" stylesheets="@../product.css">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
+      <Label fx:id="Name" layoutX="4.0" layoutY="222.0" prefHeight="20.0" prefWidth="202.0" styleClass="label-name" stylesheets="@../product.css" />
    </children>
 </AnchorPane>
