--- a/src/main/resources/product.css
+++ b/src/main/resources/product.css
@@ -1,36 +1,36 @@
 .product {
-    -fx-background-color: antiquewhite;
-    -fx-border-radius: 10px;
+    -fx-background-color: #8DECB4;
     -fx-border-width: bold;
 }
 
 .product-content {
-    -fx-padding: 5px 5px 3px;
+    -fx-padding: 5px 5px 3px 5px;
 }
 
-.product-content-name {
-    -fx-margin-bottom: 20px;
-    /* padding-bottom: 10px; */
-    -fx-color: #23262f;
-    -fx-font-size: 18px;
-    -fx-font-weight: 500;
-    -fx-line-height: 1.556;
-    -fx-display: -webkit-box;
-    -fx--webkit-line-clamp: 1;
-    -fx--webkit-box-orient: vertical;
-    -fx-white-space: pre-wrap;
-    /* overflow: hidden; */
-    /*text-emphasis: ellipsis;*/
-    -fx-word-break: break-word;
-}
+/*.product-content-name {*/
+/*    -fx-margin-bottom: 20px;*/
+/*    !* padding-bottom: 10px; *!*/
+/*    -fx-color: #23262f;*/
+/*    -fx-font-size: 18px;*/
+/*    -fx-font-weight: 500;*/
+/*    -fx-line-height: 1.556;*/
+/*    -fx-display: -webkit-box;*/
+/*    -fx--webkit-line-clamp: 1;*/
+/*    -fx--webkit-box-orient: vertical;*/
+/*    -fx-white-space: pre-wrap;*/
+/*    !* overflow: hidden; *!*/
+/*    !*text-emphasis: ellipsis;*!*/
+/*    -fx-word-break: break-word;*/
+/*}*/
 
-.product-content-price{
-    -fx-position: absolute;
-    -fx-display: inline-block;
-}
+/*.product-content-price{*/
+/*    -fx-position: absolute;*/
+/*    -fx-display: inline-block;*/
+/*}*/
 
 .product-image {
-    -fx-border-radius: 10px 10px 10px 10px;
+    -fx-border-radius: 10px 10px 0px 0px;
+    -fx-background-radius: 10px 10px 0px 0px;
     -fx-width: 100%;
     -fx-object-fit: cover;
     -fx-height: 50px;
@@ -51,5 +51,13 @@
     -fx-width: 1270px;
     -fx-max-width: 1270px;
     /*-fx-margin: 0 auto;*/
+}
+
+.label-name {
+    -fx-text-overflow: ellipsis;
+}
+
+.label-price {
+
 }
 
