--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="$CONTROLLER_NAME$">
+<AnchorPane prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.staffController">
    <children>
       <AnchorPane layoutX="5.0" prefHeight="70.0" prefWidth="1512.0" styleClass="navbar">
          <children>
@@ -28,30 +28,30 @@
                </font>
             </Label>
             <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="12.0" />
-            <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="792.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorProductappear" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
+            <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="792.0" layoutY="2.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
                <font>
                   <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
-            <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="964.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
+            <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="964.0" layoutY="2.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
                <font>
                   <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
-            <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1111.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
+            <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1111.0" layoutY="2.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
                <font>
                   <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
             <Pane fx:id="switch_pane" layoutX="649.0" layoutY="47.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
-            <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="648.0" layoutY="5.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
+            <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="648.0" layoutY="5.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
                <font>
                   <Font name="Inter ExtraBold" size="28.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="70.0" prefHeight="912.0" prefWidth="1517.0" visible="false">
+      <AnchorPane layoutY="70.0" prefHeight="912.0" prefWidth="1517.0">
          <children>
             <Label layoutX="25.0" layoutY="15.0" text="BILL LIST">
                <font>
@@ -69,12 +69,8 @@
                   <Font name="Inter Bold" size="18.0" />
                </font>
             </Button>
-            <TableView layoutX="25.0" layoutY="86.0" prefHeight="801.0" prefWidth="1452.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-              </columns>
-            </TableView>
+            <TableView fx:id="billList_table" layoutX="25.0" layoutY="86.0" prefHeight="801.0" prefWidth="1452.0" />
+            <Button layoutX="374.0" layoutY="47.0" mnemonicParsing="false" onAction="#addBillList" text="Button" />
          </children>
       </AnchorPane>
       <AnchorPane layoutY="70.0" prefHeight="912.0" prefWidth="1517.0" visible="false">
@@ -204,7 +200,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="70.0" prefHeight="912.0" prefWidth="1519.0">
+      <AnchorPane layoutY="70.0" prefHeight="912.0" prefWidth="1519.0" visible="false">
          <children>
             <Label layoutX="25.0" layoutY="15.0" text="CUSTOMER">
                <font>
