--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -2,6 +2,8 @@
 
 <?import com.gluonhq.charm.glisten.control.Avatar?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -51,7 +53,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="AnchorPaneBillList" layoutY="70.0" prefHeight="912.0" prefWidth="1517.0">
+      <AnchorPane fx:id="AnchorPaneBillList" layoutY="70.0" prefHeight="912.0" prefWidth="1517.0" visible="false">
          <children>
             <Label layoutX="25.0" layoutY="15.0" text="BILL LIST">
                <font>
@@ -162,7 +164,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="2.0" layoutY="70.0" prefHeight="912.0" prefWidth="1517.0" visible="false">
+      <AnchorPane fx:id="AnchorPaneCustomer" layoutX="2.0" layoutY="70.0" prefHeight="912.0" prefWidth="1517.0">
          <children>
             <Label layoutX="25.0" layoutY="15.0" text="CUSTOMER">
                <font>
@@ -174,30 +176,30 @@
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font></Label>
-            <TextField layoutX="45.0" layoutY="140.0" prefHeight="60.0" prefWidth="1398.0" />
-            <Label layoutX="40.0" layoutY="230.0" text="Customer Name">
+            <TextField fx:id="TextFieldCustomerName" layoutX="45.0" layoutY="140.0" prefHeight="60.0" prefWidth="1398.0" />
+            <Label layoutX="40.0" layoutY="230.0" text=" Date Of Birth">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="45.0" layoutY="260.0" prefHeight="60.0" prefWidth="665.0" />
-            <Label layoutX="770.0" layoutY="230.0" text="Customer Name">
+            <Label layoutX="770.0" layoutY="230.0" text="Gender">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="775.0" layoutY="260.0" prefHeight="60.0" prefWidth="665.0" />
-            <Label layoutX="40.0" layoutY="350.0" text="Customer Name">
+            <Label layoutX="40.0" layoutY="350.0" text="Phone Number">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="45.0" layoutY="380.0" prefHeight="60.0" prefWidth="1398.0" />
-            <Button layoutX="1323.0" layoutY="539.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="119.0" text="Next">
+            <TextField fx:id="TextFieldPhoneNumber" layoutX="45.0" layoutY="380.0" prefHeight="60.0" prefWidth="1398.0" />
+            <Button fx:id="ButtonNext" layoutX="1323.0" layoutY="539.0" mnemonicParsing="false" onAction="#ClickButtonNext" prefHeight="54.0" prefWidth="119.0" text="Next">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Button>
+            <ComboBox fx:id="ComboBoxGender" layoutX="782.0" layoutY="260.0" prefHeight="54.0" prefWidth="346.0" />
+            <DatePicker fx:id="DatePickerDateOfBirth" layoutX="40.0" layoutY="257.0" prefHeight="60.0" prefWidth="551.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutY="70.0" prefHeight="912.0" prefWidth="1519.0" visible="false">
