--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -242,7 +242,7 @@
             </children>
         </AnchorPane>
       <Pane fx:id="dimPane" prefHeight="985.0" prefWidth="1518.0" styleClass="dimPane" visible="false" />
-      <AnchorPane fx:id="productInfoAnchorpane" layoutX="31.0" layoutY="140.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background">
+      <AnchorPane fx:id="productInfoAnchorpane" layoutX="31.0" layoutY="140.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background" visible="false">
          <children>
             <Label layoutX="67.0" layoutY="27.0" text="Name">
                <font>
