--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -64,7 +64,7 @@
                 </Button>
             </children>
         </AnchorPane>
-        <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
+        <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
             <children>
                 <DatePicker layoutX="32.0" layoutY="46.0" prefHeight="43.0" prefWidth="704.0" />
                 <BarChart layoutX="14.0" layoutY="115.0" prefHeight="689.0" prefWidth="1478.0">
@@ -322,7 +322,7 @@
             <ComboBox fx:id="productTypeComboBox" layoutX="487.0" layoutY="89.0" prefHeight="46.0" prefWidth="400.0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="productInfoAnchorpane1" layoutX="41.0" layoutY="150.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background">
+      <AnchorPane fx:id="productInfoAnchorpane2" layoutX="41.0" layoutY="150.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background" visible="false">
          <children>
             <Label layoutX="67.0" layoutY="27.0" text="Name">
                <font>
