--- a/src/main/resources/manager.css
+++ b/src/main/resources/manager.css
@@ -96,6 +96,13 @@
     -fx-background-color: #00000088;
 }
 
+.spinner{
+    -fx-background-color: white;
+    -fx-text-fill: white;
+    -fx-border-width: 1px;
+    -fx-border-color: #141E46;
+}
+
 
 
 
