--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -50,7 +50,7 @@
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Button>
-            <Button layoutX="1369.0" layoutY="15.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="128.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" styleClass="main_btn" text="Remove">
+            <Button layoutX="1369.0" layoutY="15.0" mnemonicParsing="false" onAction="#clickButtonDelete" prefHeight="58.0" prefWidth="128.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" styleClass="main_btn" text="Remove">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
